array.island.Island.scala.error
Erreur de compilation :
Island:3: error: '<-' expected but ')' found.
  for (i in num) {
               ^Island:6: error: illegal start of simple expression
} 
^