array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  for (i in num) {
    
  }
}